fix: fix spacing for Select arrow

--- a/packages/pelagos/src/components/Select.less
+++ b/packages/pelagos/src/components/Select.less
@@ -60,7 +60,7 @@
 	}
 
 	.Select__arrow {
-		margin-left: @sp-12;
+		margin-left: @sp-16;
 
 		[aria-disabled='true'] > & {
 			fill: var(--icon-disabled);
